<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.mayarafelix.tipcalculator.viewmodel.CalculatorViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculation_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.MainActivity"
        tools:showIn="@layout/activity_main">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/input_check_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_check_amount_hint"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:text="@={model.inputCheckAmount}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_check_amount">

            <EditText
                android:id="@+id/input_tip_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_percentage"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="@={model.inputTipPercentage}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/calculation_outputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bill_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{model.outputCheckAmount}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/bill_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tip_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{model.outputTipAmount}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tip_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/grand_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{model.outputTotalAmount}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/grand_total_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/calculation_name"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculation_outputs"
            android:text="@{model.locationName}"
            android:textAlignment="center" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>