<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="input_check_amount_hint">Check</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="total">Total</string>
    <string name="tip">Tip</string>
    <string name="check">Check</string>

    <string name="dolar_amount">$%1$.02f</string>

    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_cancel">Cancel</string>

    <string name="save_hint">"Enter Location"</string>
</resources>
